Changed the background of the floating farm card. Fixed overflow issue

--- a/src/components/cardSelector/card/Card.css
+++ b/src/components/cardSelector/card/Card.css
@@ -42,6 +42,9 @@
     margin: 40px 0;
     padding: 0;
     color: black;
+    overflow-y: auto;
+    max-height: 478px;
+    padding-bottom: 86px;
 }
 .image{
     position: absolute;
@@ -109,3 +112,13 @@
     color: #fff;
     text-decoration: none;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(255,0,150);
+    border-radius: 10px;
+  }
